# trading-system

./: .dockerignore  .gitignore  CODE_AUDIT_REPORT_2026-04-11.md  Dockerfile.base  Dockerfile.service  FRIEND_REPO_DIFF_2026-04-11.md  HEDGE_FUND_INTEGRATION_PLAN.md  ORB_ONLY_SIGNALS_REPORT_2026-04-11.md  PAPER_TRADING_IMPLEMENTATION_BLUEPRINT_2026-04-11.md  PAPER_TRADING_INTEGRATION_PLAN_2026-04-11.md  PROGRESS.md  PROJECT_AUDIT_2026-04-22.md  README.md  README_v2.md  SYSTEM_GUIDE.md  TASKS_2026-04-11.md  cloudflared.yml  docker-compose.yml  integration.md  requirements.txt  restart_services.sh  run_institutional.sh  start_paper_service.sh  test_full_auto_loop.sh
docs/: CURRENT_SYSTEM_END_TO_END.md
docs/plans/: intelligent_data_sync.md
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.css  App.tsx  index.css  mockMarket.ts
frontend/src/api/: market.ts
gateway/: main.py
infra/: docker-compose.yml
infra/prometheus/: prometheus.yml
infra/promtail/: config.yml
scripts/: audit_backtest.py  calculate_targets.py  check_db.py  debug_predictions.py  fetch_nifty_index.py  ingest_data.py  ingest_nifty50.py  ingest_reliance.py  init_db.py  init_nifty50_db.py  init_paper_db.py  load_training_data.py  migrate_fundamentals.py  optimize_db.py  setup_fundamentals_db.py  setup_institutional_flow_db.py  sync_data.py  sync_fundamentals.py
scripts/compute/: bar_aggregator_1m.py  bar_builder_1s.py  live_enrichment.py
services/intelligence-rust-service/: Cargo.toml
services/intelligence-rust-service/src/: main.rs
shared/: feature_engineer.py
(+98 files in other folders)
