[package]
name = "intelligence-rust-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
chrono = "0.4.44"
dashmap = "6.1.0"
feed-rs = "2.3.1"
futures = "0.3.32"
hex = "0.4.3"
lazy_static = "1.5.0"
once_cell = "1.21.4"
regex = "1.12.3"
reqwest = "0.13.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
